--- a/src/app/Common/online-class-b/online-class-b.component.html
+++ b/src/app/Common/online-class-b/online-class-b.component.html
@@ -1,4 +1,5 @@
-<div class="card-online-class-a boxshadowcard" (click)="GoToTestPaper(QuesPapLink.QuestionPaperId)">
+<div class="card-online-class-a boxshadowcard" 
+(click)="GoToWebinarDetail('1')">>
     <app-postheader [Name]="'Institution Name'" [Image]="'img'" [time]="'time'"></app-postheader>
     <div style="padding: 15px;">
         <div class="d-flex" style="border-bottom: 1px solid #f1f1f1 ">
