--- a/src/app/Common/online-class-details-b/online-class-details-b.component.html
+++ b/src/app/Common/online-class-details-b/online-class-details-b.component.html
@@ -89,7 +89,7 @@
             <div style="padding:15px">
                 <div id="feedback">
                     <div>
-                        <span class="headings-small">Particpant Request</span>
+                        <span class="headings-small">Participant Request [15/30]</span>
                     </div>
                     <app-participant-request-a></app-participant-request-a>
                 </div>
