--- a/src/app/Editable/Component/project/project.component.html
+++ b/src/app/Editable/Component/project/project.component.html
@@ -1,6 +1,6 @@
 <div class="card" style="margin-top:5px;">
-      <input type="text"  class="form-control" [(ngModel)]="ProjectName" placeholder="Project Name">
-      <input type="text"  class="form-control" [(ngModel)]="ProjectDescription" placeholder="Project Description">
-      <input type="text"  class="form-control" [(ngModel)]="ProjectTimeline" placeholder="Project Timeline">
-      <input type="text"  class="form-control" [(ngModel)]="ProjectWith" placeholder="Project With">
+      <input type="text"  class="form-control" [(ngModel)]="EditProject.ProjectName" placeholder="Project Name">
+      <input type="text"  class="form-control" [(ngModel)]="EditProject.ProjectDescription" placeholder="Project Description">
+      <input type="text"  class="form-control" [(ngModel)]="EditProject.ProjectTimeline" placeholder="Project Timeline">
+      <input type="text"  class="form-control" [(ngModel)]="EditProject.ProjectWith" placeholder="Project With">
   </div>
