--- a/src/app/Page/user-main-page/user-main-page.component.html
+++ b/src/app/Page/user-main-page/user-main-page.component.html
@@ -2,7 +2,7 @@
 <div class="container" style="margin-top:85px;">
     <div class="row">
         <div class="col-md-3">
-            <app-wall-profile [Editable]="Editable" [UserWallData]="UserWallData"></app-wall-profile>
+            <app-wall-profile [Editable]="" [UserWallData]="UserWallData"></app-wall-profile>
         </div>
         <div class="col-md-9">
             <router-outlet></router-outlet>
