--- a/src/app/User/profile/profile.component.html
+++ b/src/app/User/profile/profile.component.html
@@ -17,30 +17,30 @@
 
             <div>
                 <span style="display: block;">Name:</span>
-                <input *ngIf="1==0" type="text" class="form-control" value="KRISHNAN RA" id="usr"
-                    style="padding: 30px 20px;font-size: 20px;">
+                <!-- <input *ngIf="1==0" type="text" class="form-control" value="KRISHNAN RA" id="usr"
+                    style="padding: 30px 20px;font-size: 20px;"> -->
                 <span style="padding: 10px 0px;font-size: 20px;display: block;">Krishnan RA</span>
             </div>
 
             <div>
                 <span style="display: block;">Phone:</span>
-                <input *ngIf="1==0" type="text" class="form-control" value="98989898**" id="usr"
-                    style="padding: 30px 20px;font-size: 20px;">
+                <!-- <input *ngIf="1==0" type="text" class="form-control" value="98989898**" id="usr"
+                    style="padding: 30px 20px;font-size: 20px;"> -->
                 <span style="padding: 10px 0px;font-size: 20px;display: block;">98989898**</span>
             </div>
 
 
             <div>
                 <span style="display: block;">Email:</span>
-                <input *ngIf="1==0" type="text" class="form-control" value="krishnanra@gmail" id="usr"
-                    style="padding: 30px 20px;font-size: 20px;">
+                <!-- <input *ngIf="1==0" type="text" class="form-control" value="krishnanra@gmail" id="usr"
+                    style="padding: 30px 20px;font-size: 20px;"> -->
                 <span style="padding: 10px 0px;font-size: 20px;display: block;">krishnanra@gmail</span>
             </div>
 
             <div>
                 <span style="display: block;">Professional:</span>
-                <input *ngIf="1==0" type="text" class="form-control" value="Student" id="usr"
-                    style="padding: 30px 20px;font-size: 20px;">
+                <!-- <input *ngIf="1==0" type="text" class="form-control" value="Student" id="usr"
+                    style="padding: 30px 20px;font-size: 20px;"> -->
                 <span style="padding: 10px 0px;font-size: 20px;display: block;">Student</span>
             </div>
 
