--- a/src/app/User/wall/wall.component.html
+++ b/src/app/User/wall/wall.component.html
@@ -70,7 +70,8 @@
             <div style="padding-right: 1px !important;
         padding-left: 1px !important;" *ngFor="let members of PostDetails">
                 <!-- <app-post [data]="members"></app-post> -->
-                <app-online-class-a [onlineclassdata]="members"></app-online-class-a>
+                <!-- <app-online-class-a [onlineclassdata]="members"></app-online-class-a> -->
+                <app-online-class-d [onlineclassdata]="members"></app-online-class-d>
             </div>
 
             <!-- </div> -->
