--- a/src/app/Common/online-class-c/online-class-c.component.html
+++ b/src/app/Common/online-class-c/online-class-c.component.html
@@ -1,9 +1,10 @@
-<div class="card-online-class-a boxshadowcard2" style="margin-bottom: 25px;" *ngFor="let post of postdetails" (click)="GoToTestPaper(QuesPapLink.QuestionPaperId)">
-   <!-- <app-postheader [Name]="'Institution Name'" [Image]="'img'" [time]="'time'"></app-postheader>  -->
+<div class="card-online-class-a boxshadowcard2" style="margin-bottom: 25px;"
+    (click)="GoToWebinarDetail(onlineclassdata.webinarid)">
+    <!-- <app-postheader [Name]="'Institution Name'" [Image]="'img'" [time]="'time'"></app-postheader>  -->
     <div class="" style="display: block;">
-        <span class="statusspan" *ngIf="post.status==1" style="background-color: #28a745;">Accepted</span>
-        <span class="statusspan" *ngIf="post.status==2" style="background-color: #d24956;">Rejected</span>
-        <span class="statusspan" *ngIf="post.status==0" style="background-color: #e5992a;">Pending</span>
+        <span class="statusspan" *ngIf="onlineclassdata.status==1" style="background-color: #28a745;">Scheduled</span>
+        <span class="statusspan" *ngIf="onlineclassdata.status==2" style="background-color: #d24956;">Rejected</span>
+        <span class="statusspan" *ngIf="onlineclassdata.status==0" style="background-color: #e5992a;">Pending</span>
     </div>
     <div style="padding: 10px 10px 0px 10px">
         <div class="d-flex" style="border-bottom: 1px solid #f1f1f1 ">
@@ -34,43 +35,61 @@
 
 
         </div>
+        <div class="d-flex" style="margin-top: 15px;">
+            <div class="p-1 flex-fill">
+                <span class="onlineSubHeading2" style="display: block;">when</span>
+                <span class="onlineSubDescription2">3-Jun 16:30 PM,30 Mins</span>
+            </div>
+            <div class="p-1 flex-fill">
 
-        <div class="row" style="margin-top: 15px;">
-            <div class="col-md-4">
-                <span class="onlineSubHeading" style="display: block;">Date</span>
-                <span class="onlineSubDescription">3-Jun 16:30 PM</span>
-            </div>
-            <div class="col-md-4">
-                <span class="onlineSubHeading" style="display: block;">Duration</span>
-                <span class="onlineSubDescription">30 Mins</span>
-            </div>
-            <div class="col-md-4">
-                <span class="onlineSubHeading" style="display: block;">Platform</span>
-                <span [className]="onlineSubDescription">
-                  {{post.platform}}              
-                </span>
+                <span class="onlineSubHeading2" style="display: block;">Participant</span>
+                <span class="onlineSubDescription2">15 out 15 available</span>
             </div>
         </div>
+        <div class="d-flex justify-content-end" style="margin-top: 5px;margin-bottom: 5px;">
+            <!-- <div class="flex-fill">
+            <span>To Participate</span>      
+            <input type="button" value="more" class="regismore" style="width: 100%;" /> 
+          </div> -->
+
+            <div class="p-2" style="padding: 10px;
+          text-align: center;    
+          margin-top: auto;
+          margin-bottom: auto;">
+                <span class="platformtag"><i class="fas fa-video"></i> {{onlineclassdata.platform}}</span>
+            </div>
+            <div class="p-2" style="padding: 10px;
+            text-align: center;    
+            margin-top: auto;
+            margin-bottom: auto;">
+                <span class="pricetag  free" *ngIf="onlineclassdata.fee==0">Free</span>
+                <span class="pricetag" *ngIf="onlineclassdata.fee!=0">{{onlineclassdata.fee}} <i
+                        class="fas fa-rupee-sign"></i></span>
+            </div>
 
 
-        <div class="row" style="margin-top: 15px;
+
+        </div>
+    </div>
+
+    <div class="row" style="margin-top: 15px;
         background-color: #bfbfbf;
-        padding: 10px 0px" *ngIf="post.status==1">
-            <div class="col-md-6">
-                <span class="onlineSubHeading" style="display: block;">URL</span>
-                <span class="onlineSubDescription" style=" word-break: break-all;">www.zoom.com/j/awasadsad</span>
-            </div>
-            <div class="col-md-6" style="margin-top: auto;margin-bottom: auto;">
-                <span class="onlineSubDescription" style="display: block;">Room ID:46153693</span>
-                <span class="onlineSubDescription" style="display: block;">Password:4210</span>    
-            </div>
+        padding: 10px 0px" *ngIf="onlineclassdata.status==1">
+        <div class="col-md-6">
+            <span class="onlineSubHeading" style="display: block;">URL</span>
+            <span class="onlineSubDescription" style=" word-break: break-all;">www.zoom.com/j/awasadsad</span>
+        </div>
+        <div class="col-md-6" style="margin-top: auto;margin-bottom: auto;">
+            <span class="onlineSubDescription" style="display: block;">Room ID:46153693</span>
+            <span class="onlineSubDescription" style="display: block;">Password:4210</span>
+        </div>
 
-            <!-- <div>
+        <!-- <div>
         <input type="button" class="btn" value="view" />
       </div> -->
-        </div>
-
     </div>
+
+
 
 
 </div>
