--- a/src/app/Common/online-class-d/online-class-d.component.css
+++ b/src/app/Common/online-class-d/online-class-d.component.css
@@ -42,7 +42,10 @@ tr.tabletd td {
     font-weight: 500;
     font-size: 15px;
 }
-
+.tutorname{
+    font-size: 14px;
+    color: #3D3D3D;
+}
 .onlineSubDescription {
     color: #3D3D3D;
     font-size: 13px;
@@ -51,6 +54,15 @@ tr.tabletd td {
 .onlineSubHeading {
     color: #5c5c5c;
     font-size: 15px;
+}
+.onlineSubDescription2 {
+    color: #5c5c5c;
+    font-size: 13px;
+}
+
+.onlineSubHeading2 {
+    color: #c0c0c0;
+    font-size: 12px;
 }
 
 .tutordescription {
@@ -63,6 +75,22 @@ tr.tabletd td {
     font-size: 12px;
 }
 
+.boxshadowcard {
+    -webkit-box-shadow: 0px 0px 9px 1px rgba(237, 237, 237, 1);
+    -moz-box-shadow: 0px 0px 9px 1px rgba(237, 237, 237, 1);
+    box-shadow: 0px 0px 9px 1px rgba(237, 237, 237, 1);
+    margin-bottom: 15px;
+}
+
+.regisbutn {
+    border: none;
+    background-color: #247ba0;
+    color: white;
+    padding: 5px 15px;
+    font-weight: 500;
+    border-radius: 10px;
+    box-shadow: 0px 2px 5px #b6b6b6;
+}
 .pricetag{
     border: none;
     background-color: #e0e0e0;
@@ -90,43 +118,7 @@ tr.tabletd td {
     border-radius: 10px;   
     font-size: 14px;
 }
-.boxshadowcard2{
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-    margin-bottom: 15px;
-    padding: 15px 10px;
-}
 
-.boxshadowcard2:hover{
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-    margin-bottom: 15px;
-   
-}
-.onlineSubDescription2 {
-    color: #5c5c5c;
-    font-size: 13px;
-}
-
-.onlineSubHeading2 {
-    color: #c0c0c0;
-    font-size: 12px;
-}
-
-.boxshadowcard {
-    -webkit-box-shadow: 0px 0px 9px 1px rgba(237, 237, 237, 1);
-    -moz-box-shadow: 0px 0px 9px 1px rgba(237, 237, 237, 1);
-    box-shadow: 0px 0px 9px 1px rgba(237, 237, 237, 1);
-    margin-bottom: 15px;
-}
-
-.regisbutn {
-    border: none;
-    background-color: #247ba0;
-    color: white;
-    padding: 5px 15px;
-    font-weight: 500;
-    border-radius: 10px;
-    box-shadow: 0px 2px 5px #b6b6b6;
-}
 
 .regisbutn-small {
     border: none;
