--- a/src/app/Institution/Page/activity-page/activity-page.component.html
+++ b/src/app/Institution/Page/activity-page/activity-page.component.html
@@ -37,7 +37,7 @@
       <div style="padding:15px">
         <div id="feedback">
           <div>
-            <span class="headings-small">Particpant Request</span>
+            <span class="headings-small">Participant Request [15/30]</span>
           </div>
           <app-participant-request-a [participantlist]="participantlist"></app-participant-request-a>
         </div>
