--- a/src/app/Page/online-class-details-a/online-class-details-a.component.css
+++ b/src/app/Page/online-class-details-a/online-class-details-a.component.css
@@ -35,6 +35,15 @@ tr.tabletd td {
     color: #5c5c5c;
     font-size: 12px;
 }
+.onlineSubDescription2 {
+    color: #5c5c5c;
+    font-size: 13px;
+}
+
+.onlineSubHeading2 {
+    color: #c0c0c0;
+    font-size: 12px;
+}
 
 .boxshadowcard {
     -webkit-box-shadow: 0px 0px 9px 1px rgba(237, 237, 237, 1);
@@ -44,13 +53,76 @@ tr.tabletd td {
 }
 
 .regisbutn {
-    width: 100%;
     border: none;
-    background-color: white;
-    color: #ff8952;
-    padding: 5px 5px;
+    background-color: #247ba0;
+    color: white;
+    padding: 5px 15px;
     font-weight: 500;
+    border-radius: 10px;
+    box-shadow: 0px 2px 5px #b6b6b6;
 }
+.pricetag{
+    border: none;
+    background-color: #e0e0e0;
+    color: #5c5c5c;
+    padding: 7px 15px;
+    font-weight: 500;
+    border-radius: 10px;   
+    font-size: 14px;
+}
+.pricetag.free{
+    border: 1px solid #2A8CB7;
+    background-color: white;
+    color: #2A8CB7;
+    padding: 7px 15px;
+    font-weight: 500;
+    border-radius: 10px;   
+    font-size: 14px;
+}
+.platformtag{
+    border: none;
+    background-color: #e0e0e0;
+    color: #5c5c5c;
+    padding: 7px 15px;
+    font-weight: 500;
+    border-radius: 10px;   
+    font-size: 14px;
+}
+
+
+
+.regisbutn-small {
+    border: none;
+    background-color: #247ba0;
+    font-size: 14px;
+    color: white;
+    padding: 5px 15px;
+    font-weight: 500;
+    border-radius: 5px;
+    box-shadow: 0px 2px 5px #b6b6b6;
+}
+
+.regisbutn-cancel-small {
+    border: none;
+    font-size: 14px;
+    background-color: #6c757d;
+    color: whitesmoke;
+    padding: 5px 15px;
+    font-weight: 500;
+    border-radius: 5px;
+    box-shadow: 0px 2px 5px #b6b6b6;
+}
+
+.regisbutn-cancel {
+    border: none;
+    background-color: #6c757d;
+    color: whitesmoke;
+    padding: 10px 25px;
+    font-weight: 500;
+    border-radius: 10px;
+    box-shadow: 0px 2px 5px #b6b6b6;
+}
+
 
 .regisbutn2 {
     width: 100%;
