--- a/src/app/Page/online-class-details-a/online-class-details-a.component.html
+++ b/src/app/Page/online-class-details-a/online-class-details-a.component.html
@@ -1,39 +1,77 @@
-<div style="margin-top: 75px; display: flex;
-justify-content: center;
-align-items: center;">
-    <div class="col-md-10" style="padding:15px;">
+<div style="margin-top: 15px;
+display: flex;">
+    <div class="col-md-12" style="padding:15px;">
+        <div class="d-flex justify-content-end" style="margin-bottom: 5px;">
+            <div class="d-flex" style="margin-top: 5px;margin-bottom: 5px;">
+                <!-- <div class="flex-fill">
+                <span>To Participate</span>      
+                <input type="button" value="more" class="regismore" style="width: 100%;" /> 
+              </div> -->
+
+                <div class="p-2" style="padding: 10px;
+              text-align: center;    
+              margin-top: auto;
+              margin-bottom: auto;">
+                    <span class="platformtag"><i class="fas fa-video"></i> {{onlineclassdata.platform}}</span>
+                </div>
+                <div class="p-2" style="padding: 10px;
+                text-align: center;    
+                margin-top: auto;
+                margin-bottom: auto;">
+                    <span class="pricetag  free" *ngIf="onlineclassdata.fee==0">Free</span>
+                    <span class="pricetag" *ngIf="onlineclassdata.fee!=0">{{onlineclassdata.fee}} <i
+                            class="fas fa-rupee-sign"></i></span>
+                </div>
+
+
+                <div class="p-2" style="padding: 10px;text-align: center;">
+                    <input type="button" class="regisbutn" value="Register" (click)="openmodal()" />
+                </div>
+            </div>
+        </div>
         <div class="d-flex" style="margin-bottom: 15px;">
             <div class="p-2 mr-auto" style="display: block;padding-left: 0px !important;">
                 <span class="onlineTopicHeading">Master 'Reading Skills' for CBSE 10th Board</span>
             </div>
-            <div class="p-2">
-                <input type="button" class="regisbutn2" value="register" />
+
+        </div>
+        <div class="d-flex" style="margin-top: 15px;">
+            <div class="flex-fill">
+                <span class="onlineSubHeading2" style="display: block;">when</span>
+                <span class="onlineSubDescription2">3-Jun 16:30 PM,30 Mins</span>
+            </div>
+            <div class="flex-fill">
+                <span class="onlineSubHeading2" style="display: block;">Participant</span>
+                <span class="onlineSubDescription2">15 out 15 available</span>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-md-8">
+
+
+        <div class="d-flex">
+            <div class="">
                 <div style="display: block;margin-top: 15px;
         margin-bottom: 15px;
         line-height: 2.25;">
                     <span class="onlineSubHeading" style="display: block;">Course Detail</span>
                     <span class="onlineTopicDescription">
 
-            <ul style=" list-style-type: none;
+                        <ul style=" list-style-type: none;
             margin: 0;
             padding: 0;">
-              <li style="font-size: 13px;">Understand Kirchhoff's Current Law in this Live session</li>
-              <li style="font-size: 13px;">Learn to apply KCL and KVL in an Electrical Circuit</li>
-              <li style="font-size: 13px;">Understand Kirchhoff's Voltage Law with some simple examples</li>
-              <li style="font-size: 13px;">Clear your doubts with Subject Expert Hemant Sir</li>
-            </ul>
-          </span>
+                            <li style="font-size: 13px;">Understand Kirchhoff's Current Law in this Live session</li>
+                            <li style="font-size: 13px;">Learn to apply KCL and KVL in an Electrical Circuit</li>
+                            <li style="font-size: 13px;">Understand Kirchhoff's Voltage Law with some simple examples
+                            </li>
+                            <li style="font-size: 13px;">Clear your doubts with Subject Expert Hemant Sir</li>
+                        </ul>
+                    </span>
                 </div>
 
                 <div style="margin-top: 15px;line-height: 2.25;">
                     <span class="onlineSubHeading" style="display: block;">Tutor Detail</span>
                     <span style="display: block;">S.Bala Krishnan <span class="QuesLinkDescription">13 Yrs , </span>
-                    <span class="QuesLinkDescription">M.A, B.Ed</span>
+                        <span class="QuesLinkDescription">M.A, B.Ed</span>
                     </span>
 
                     <ul style=" list-style-type: none;margin: 0;padding: 0;line-height: 2.25;">
@@ -44,41 +82,7 @@ align-items: center;">
                     </ul>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="row" style="margin-top: 15px;">
-                    <div class="col-md-4">
-                        <span class="onlineSubHeading" style="display: block;">Date</span>
-                        <span class="onlineSubDescription">3-Jun 16:30 PM</span>
-                    </div>
-                    <div class="col-md-4">
-                        <span class="onlineSubHeading" style="display: block;">Duration</span>
-                        <span class="onlineSubDescription">30 Mins</span>
-                    </div>
-                    <div class="col-md-4">
-                        <span class="onlineSubHeading" style="display: block;">Language</span>
-                        <span class="onlineSubDescription">Eng/Tamil</span>
-                    </div>
-                </div>
 
-
-                <div class="row" style="margin-top: 15px;">
-                    <div class="col-md-4">
-                        <span class="onlineSubHeading" style="display: block;">Room Size</span>
-                        <span class="onlineSubDescription">15 Max</span>
-                    </div>
-                    <div class="col-md-4">
-                        <span class="onlineSubHeading" style="display: block;">Fees</span>
-                        <span class="onlineSubDescription">15Rs /-</span>
-                    </div>
-                    <div class="col-md-4">
-                        <span class="onlineSubHeading" style="display: block;">Platform</span>
-                        <span class="onlineSubDescription">Zoom</span>
-                    </div>
-                    <!-- <div>
-          <input type="button" class="btn" value="view" />
-        </div> -->
-                </div>
-            </div>
         </div>
 
     </div>
