--- a/src/app/User/search-page/search-page.component.css
+++ b/src/app/User/search-page/search-page.component.css
@@ -23,3 +23,14 @@
     color: white;
     margin-right: 10px;
 }
+
+.btn-back{
+    float: left;
+    background-color: #e0e0e0;
+    color: #5C5C5C;
+    border-radius: 30px 0px 0px 30px;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    line-height: 1.5;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
