--- a/src/app/User/search-page/search-page.component.html
+++ b/src/app/User/search-page/search-page.component.html
@@ -1,7 +1,10 @@
 <app-navbar></app-navbar>
 <div class="container" style="margin-top:85px;">
-    <h4 style="color:#5c5c5c"> Search better here</h4>
-    <div class="row" style="margin-top: 40px;">
+    <div class="d-flex" style="margin-top: 20px;margin-bottom: 20px;">
+        <button type="button" class="btn-back" style="float: left;" ><i class="fas fa-arrow-left"></i> back</button>
+    </div>
+    <h5 style="color:#5c5c5c"> Search Webinars @Organisers #Topics</h5>
+    <div class="row" style="margin-top: 20px;">
         <div class="col-md-4">
             <div style="display: flex;">
                 <input type="text" class="form-control" [(ngModel)]="searchText" placeholder="Search.."
@@ -53,8 +56,8 @@
 
 
             <div style="margin-top: 20px;">
-                <span class="filter-text" (click)="removefilter(fls)" *ngFor="let fls of filters">
-                    {{fls}}
+                <span class="filter-text"  *ngFor="let fls of filters">
+                    {{fls}} <i (click)="removefilter(fls)" style="margin-left: 5px;" class="far fa-trash-alt"></i>
                 </span>
             </div>
             <div *ngIf="searchText?.length>0" style="background-color: #f1f1f1;
