--- a/src/styles.css
+++ b/src/styles.css
@@ -148,17 +148,24 @@ color:#d24956;
 }
 
 .card-online-class-a {
-    -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-    -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    margin-bottom: 15px;
+    box-shadow: 1px 1px 3px rgb(211, 211, 211) ;
     border-radius: 0px;
 }
-
+.card-online-class-a:hover{
+    -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    
+  
+}
 .boxshadowcard {
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
     margin-bottom: 15px;
     padding-bottom: 1px !important;
 }
+
+
 
 .MT10 {
     margin-top: 10px;
